cards: fix wrapping + line-height

--- a/client/resources/less/app.less
+++ b/client/resources/less/app.less
@@ -91,6 +91,7 @@ body {
   box-sizing: border-box;
   box-shadow: 0 1px 1.5px 0 rgba(0,0,0,0.12);
   position: relative;
+  white-space: normal;
 
   header {
     background: @blue;
@@ -137,6 +138,8 @@ body {
     left: 0;
     right: 0;
     box-sizing: border-box;
+
+    line-height: 1.25;
   }
 
   &.chat {
